--- a/src/locales/garnir.json
+++ b/src/locales/garnir.json
@@ -1,47 +1,53 @@
 {
-    "title": { "ru": "Гарниры", "en": "Garnishes" },
-    "garnishes": [
-      {
-        "name": { "ru": "Фри", "en": "Fries" },
-        "description": { "ru": "", "en": "" },
-        "price": "н/д",
-        "valuta": { "ru": "сум", "en": "sum" }
-      },
-      {
-        "name": { "ru": "Картофель по-домашнему", "en": "Homestyle Potatoes" },
-        "description": { "ru": "", "en": "" },
-        "price": "н/д",
-        "valuta": { "ru": "сум", "en": "sum" }
-      },
-      {
-        "name": { "ru": "Пюре со сливками", "en": "Creamy Mashed Potatoes" },
-        "description": { "ru": "", "en": "" },
-        "price": "н/д",
-        "valuta": { "ru": "сум", "en": "sum" }
-      },
-      {
-        "name": { "ru": "Пюре с жареным луком", "en": "Mashed Potatoes with Fried Onions" },
-        "description": { "ru": "", "en": "" },
-        "price": "н/д",
-        "valuta": { "ru": "сум", "en": "sum" }
-      },
-      {
-        "name": { "ru": "Рис", "en": "Rice" },
-        "description": { "ru": "", "en": "" },
-        "price": "н/д",
-        "valuta": { "ru": "сум", "en": "sum" }
-      },
-      {
-        "name": { "ru": "Айдахо", "en": "Idaho" },
-        "description": { "ru": "", "en": "" },
-        "price": "н/д",
-        "valuta": { "ru": "сум", "en": "sum" }
-      },
-      {
-        "name": { "ru": "Жареные шампиньоны", "en": "Fried Mushrooms" },
-        "description": { "ru": "", "en": "" },
-        "price": "н/д",
-        "valuta": { "ru": "сум", "en": "sum" }
-      }
-    ]
-  }
+  "title": { "ru": "Гарниры", "en": "Garnishes" },
+  "garnishes": [
+    {
+      "name": { "ru": "Фри", "en": "Fries" },
+      "description": { "ru": "", "en": "" },
+      "price": 15000,
+      "valuta": { "ru": "сум", "en": "sum" }
+    },
+    {
+      "name": { "ru": "Картофель по-домашнему", "en": "Homestyle Potatoes" },
+      "description": { "ru": "", "en": "" },
+      "price": 15000,
+      "valuta": { "ru": "сум", "en": "sum" }
+    },
+    {
+      "name": { "ru": "Пюре со сливками", "en": "Creamy Mashed Potatoes" },
+      "description": { "ru": "", "en": "" },
+      "price": 15000,
+      "valuta": { "ru": "сум", "en": "sum" }
+    },
+    {
+      "name": { "ru": "Рис", "en": "Rice" },
+      "description": { "ru": "", "en": "" },
+      "price": 15000,
+      "valuta": { "ru": "сум", "en": "sum" }
+    },
+    {
+      "name": { "ru": "Гречка", "en": "Buckwheat" },
+      "description": { "ru": "", "en": "" },
+      "price": 15000,
+      "valuta": { "ru": "сум", "en": "sum" }
+    },
+    {
+      "name": { "ru": "Жареные шампиньоны", "en": "Fried Mushrooms" },
+      "description": { "ru": "", "en": "" },
+      "price": 65000,
+      "valuta": { "ru": "сум", "en": "sum" }
+    },
+    {
+      "name": { "ru": "Сложный гарниры", "en": "Complex side dishes" },
+      "description": { "ru": "", "en": "" },
+      "price": 20000,
+      "valuta": { "ru": "сум", "en": "sum" }
+    },
+    {
+      "name": { "ru": "Булгур", "en": "Bulgur" },
+      "description": { "ru": "", "en": "" },
+      "price": 15000,
+      "valuta": { "ru": "сум", "en": "sum" }
+    }
+  ]
+}
