--- a/src/locales/salads.json
+++ b/src/locales/salads.json
@@ -4,8 +4,8 @@
     {
       "name": { "ru": "Хрустящий баклажан", "en": "Crispy Eggplant" },
       "description": {
-        "ru": "(баклажаны, черри, мацарелла, соус)",
-        "en": "(eggplants, cherry tomatoes, mozzarella, sauce)"
+        "ru": "(баклажаны, черри, соус Арой-д, кремета)",
+        "en": "(eggplants, cherry tomatoes, Aroy-d sauce, cremeta)"
       },
       "price": 50000,
       "valuta": { "ru": "сум", "en": "sum" }
@@ -31,8 +31,8 @@
     {
       "name": { "ru": "Греческий", "en": "Greek" },
       "description": {
-        "ru": "(помидор, огурец, оливки, фетакса, лук)",
-        "en": "(tomato, cucumber, olives, feta cheese, onion)"
+        "ru": "(помидор, огурцы, оливки, фетакса, лимон, салад-микс, паприка светофор, маслины)",
+        "en": "(tomato, cucumbers, olives, feta cheese, lemon, salad mix, paprika traffic light, olives)"
       },
       "price": 40000,
       "valuta": { "ru": "сум", "en": "sum" }
@@ -40,8 +40,8 @@
     {
       "name": { "ru": "Рукола с креветками", "en": "Arugula with Shrimps" },
       "description": {
-        "ru": "(рукола, черри, креветки, бальзамик)",
-        "en": "(arugula, cherry tomatoes, shrimps, balsamic)"
+        "ru": "(рукола, черри, креветки, бальзамин)",
+        "en": "(arugula, cherry tomatoes, shrimps, balsam)"
       },
       "price": 65000,
       "valuta": { "ru": "сум", "en": "sum" }
@@ -49,7 +49,7 @@
     {
       "name": { "ru": "Азия", "en": "Asia" },
       "description": {
-        "ru": "(язык, помидоры, огурцы, салатный лист, бальзамик)",
+        "ru": "(язык, помидоры, огурцы, салатный лист, бальзамика)",
         "en": "(tongue, tomatoes, cucumbers, lettuce, balsamic)"
       },
       "price": 35000,
@@ -58,8 +58,8 @@
     {
       "name": { "ru": "Белый медведь", "en": "White Bear" },
       "description": {
-        "ru": "(специальный фирменный салат)",
-        "en": "(special signature salad)"
+        "ru": "(грибы, мясо отварное, курица, маяонез, сыр, картофель пай, пекника)",
+        "en": "(mushrooms, boiled meat, chicken, mayonnaise, cheese, potato pie, picnic)"
       },
       "price": 65000,
       "valuta": { "ru": "сум", "en": "sum" }
@@ -67,8 +67,8 @@
     {
       "name": { "ru": "Шанхай", "en": "Shanghai" },
       "description": {
-        "ru": "(азиатский стиль салат)",
-        "en": "(Asian-style salad)"
+        "ru": "(говядина, огурцы, помидоры, морковь, болг. перец, соя, соус)",
+        "en": "(beef, cucumbers, tomatoes, carrots, bell peppers, soy, sauce)"
       },
       "price": 38000,
       "valuta": { "ru": "сум", "en": "sum" }
@@ -76,8 +76,8 @@
     {
       "name": { "ru": "Оливье", "en": "Olivier" },
       "description": {
-        "ru": "(классический салат с курицей)",
-        "en": "(classic salad with chicken)"
+        "ru": "(говядина, морковь, картофель, перец, маяонез, зелёные горошек, маринованные огурцы)",
+        "en": "(beef, carrots, potatoes, peppers, mayonnaise, green peas, pickles)"
       },
       "price": 40000,
       "valuta": { "ru": "сум", "en": "sum" }
@@ -88,7 +88,7 @@
         "ru": "(узбекский традиционный салат)",
         "en": "(Uzbek traditional salad)"
       },
-      "price": 45000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     },
     {
@@ -97,7 +97,7 @@
         "ru": "(салат в французском стиле)",
         "en": "(French-style salad)"
       },
-      "price": 50000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     },
     {
@@ -106,7 +106,7 @@
         "ru": "(простой и вкусный салат)",
         "en": "(simple and tasty salad)"
       },
-      "price": 40000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     },
     {
@@ -115,7 +115,7 @@
         "ru": "(легкий и освежающий салат)",
         "en": "(light and refreshing salad)"
       },
-      "price": 43000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     },
     {
@@ -124,7 +124,7 @@
         "ru": "(помидоры, лук, зелень)",
         "en": "(tomatoes, onion, greens)"
       },
-      "price": 35000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     },
     {
@@ -133,7 +133,7 @@
         "ru": "(традиционный узбекский салат)",
         "en": "(traditional Uzbek salad)"
       },
-      "price": 38000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     },
     {
@@ -142,7 +142,7 @@
         "ru": "(салат с курицей и овощами)",
         "en": "(salad with chicken and vegetables)"
       },
-      "price": 46000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     },
     {
@@ -151,7 +151,7 @@
         "ru": "(классический цезарь с курицей)",
         "en": "(classic Caesar with chicken)"
       },
-      "price": 65000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     },
     {
@@ -160,7 +160,7 @@
         "ru": "(классический цезарь с креветками)",
         "en": "(classic Caesar with shrimps)"
       },
-      "price": 70000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     },
     {
@@ -169,7 +169,7 @@
         "ru": "(местный фирменный салат)",
         "en": "(local signature salad)"
       },
-      "price": 48000,
+      "price": "недоступна",
       "valuta": { "ru": "сум", "en": "sum" }
     }
   ]
